--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/geojson": "^7946.0.7",
     "@types/jest": "^24.0.0",
+    "@types/leaflet": "^1.5.12",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-leaflet": "^2.5.1",
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
